Fix key value schema show bug and make versions readable

--- a/ui/components/TopicPage/Schema/CreateSchema/CreateSchema.module.css
+++ b/ui/components/TopicPage/Schema/CreateSchema/CreateSchema.module.css
@@ -10,3 +10,7 @@
   margin-bottom: 8rem;
   max-width: 480rem;
 }
+
+.ProtobufInfoHelpIconWrapper {
+  display: inline-block;
+}
