--- a/ui/components/TopicPage/Schema/Schema.module.css
+++ b/ui/components/TopicPage/Schema/Schema.module.css
@@ -27,6 +27,12 @@
   transition: var(--transition-short);
 }
 
+.SchemaListEntryVersionWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 .SchemaListEntrySelected {
   background-color: var(--surface-color);
 }
