--- a/ui/components/ui/ConfigurationTable/HelpIcon/HelpIcon.module.css
+++ b/ui/components/ui/ConfigurationTable/HelpIcon/HelpIcon.module.css
@@ -13,3 +13,8 @@
   display: inline;
   vertical-align: middle;
 }
+
+.SvgIcon {
+  padding-bottom: 2rem;
+  display: flex;
+}
